# MYGO-DSP

./: .gitignore  PROJECT_PLAN.md  README.md  TEST_REPORT.md  package.json
dsp-core/: CMakeLists.txt  package.json
dsp-core/include/: AutoFilterDesigner.h  Buffer.h  DSPMath.h  FIRFilter.h  IIRFilter.h  IOperator.h  WaveformGenerator.h
dsp-core/src/: AutoFilterDesigner.cpp  Engine.cpp  Engine.h  FIRFilter.cpp  IIRFilter.cpp  WaveformGenerator.cpp  main.cpp
dsp-core/tests/: bench_engine.cpp  test_auto_design.cpp  test_engine.cpp  test_fir.cpp  test_iir.cpp  test_waveform.cpp
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/electron/: main.cjs  preload.cjs
frontend/src/: App.css  App.tsx  constants.ts
frontend/src/components/: ControlPanel.tsx  FilterCard.tsx  PoleZeroChart.tsx  SpectrumChart.tsx  WaveCard.tsx  WaveChart.tsx
frontend/src/types/: dsp.ts
report/: mygo-dsp-report.html  mygo-dsp-report.tex  style.css
